# SIMRA-PostProc

./: ASMs3DSimra.C  CMakeLists.txt  FSWallDistance.C  FSWallDistance.h  SIMFSWallDistance.C  SIMFSWallDistance.h  SIMSimraProject.C  SIMSimraProject.h  SIMSimraTransfer.C  SIMSimraTransfer.h  SimraEnums.h  SimraFieldGenerator.C  SimraFieldGenerator.h  SimraIO.C  SimraIO.h  SimraIntegrand.C  main_CompareSetup.C  main_PostProc.C  main_SolutionTransfer.C
Test/: Box-fixup.xinp  Box.hreg  Box.reg  Box4-fixup.boun.orig  Box4-fixup.init.orig
doc/: Doxyfile.in  SIMRA-PostProc.dox.in
scripts/: runCompareTest.sh
